Revision 265: (2012/01/04 Armin Biernaczyk)
- ovcvlb.pas
  Bugfix for an issue in the function 'ScrollCanvas' that led to display problems in
  TOvcVirtualListBox and TOvcReportView when using the mousewheel.

Revision 264: (2011/12/18 Armin Biernaczyk)
- ovcedit.pas
  New property 'ShowWrapColumn' to display a vertical line at a certain column in
  TOvcEditor (similar to the Delphi IDE).
- ovctcbox.pas
  Fix for an issue when using TOvcTCCheckBox in a TOvcTable when user defined styles
  are used in Delphi XE2.

Revision 257: (2011/09/22 Armin Biernaczyk)
- ovctable.pas
  Change in TOvcCustomTable.DoGetCellData to detect invalid pointers in GetCellData-
  event at runtime.

Revision 250: (2011/09/07 Armin Biernaczyk)
- ovcstr.pas
  Code for OvcStr.StrChPos changed to resolve issue 3405788.

Revision 242/243: (2011/09/01 Armin Biernaczyk)
- ovc.inc
  New Symbol 'VERSIONXE2' for Delphi XE2 (aka Pulsar)
- ovccklb.pas, ovcclrcb.pas, ovccmbx.pas, ovcnbk.pas, ovctccheckbbx.pas,
  OvcThemes.pas,
  Code modified to use 'StyleServices' instead of 'ThemeServices' in Delphi XE2;
  'ThemeServices' is deprecated in Delphi XE2.
- ovcdlm.pas
  Code for TOvcFastList modified for Delphi XE2 (type 'Classes.TPointerList' has
  changed in XE2)
- ovcnbk.pas
  Modified Theme-support: When themes were active, the properties
  TOvcTabPage.TabColor and TOvcNotebook.Color have been ignored. Now these colors are
  used except when they have the default-values (clBtnface)
- ovctbcls.pas
  Minor changes for Delphi XE2
- ovctcbox.pas
  Added Theme-Support for TOvcTCCheckBox

Revision 241: (2011/08/28 Armin Biernaczyk)
- ovcstr.pas
  Reimplementation of 'UseAsciiZStrings' (rev 237) was incorrect and caused errors
  when using different kinds of strings in TOvcTable.
- ovcrvidx.pas, o32rxngn.pas, o32intlst.pas, o32intdeq.pas, o32igrid.pas
  Minor changes for compatibility with Delphi XE2

Revision 238: (2011/07/23 Armin Biernaczyk)
- ovclb.pas